maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:62: error: ')' expected but ',' found.
  while(getX()!=posX,getY()!=posY){
                    ^JediEscaper:62: error: ';' expected but ')' found.
  while(getX()!=posX,getY()!=posY){
                                 ^